function(add_shm_tool target)
    add_executable(${target} ${ARGN})
    target_link_libraries(${target} PRIVATE KaMinPar::KaMinPar KaMinPar::KaMinParCLI KaMinPar::KaMinParIO)
    target_compile_options(${target} PRIVATE ${KAMINPAR_WARNING_FLAGS})
    set_target_properties(${target} PROPERTIES KASSERT_ASSERTION_LEVEL ${KAMINPAR_ASSERTION_LEVEL_CODE})
    message(STATUS "Enabled tool: ${target}")
endfunction()

add_shm_tool(ConnectedComponentsTool ConnectedComponentsTool.cc)
add_shm_tool(GraphCompressionTool GraphCompressionTool.cc)
add_shm_tool(GraphRearrangementTool GraphRearrangementTool.cc)
add_shm_tool(GraphPropertiesTool GraphPropertiesTool.cc)
add_shm_tool(PartitionPropertiesTool PartitionPropertiesTool.cc)
