[build-system]
requires = [
  "scikit-build-core>=0.10",
  "cython",
  "cython-cmake",
  "networkit==11.1.post1",
]
build-backend = "scikit_build_core.build"

[project]
name = "kaminpar_networkit"
version = "3.4.1"
description = "NetworKit bindings for KaMinPar"
dependencies = ["networkit==11.1.post1"]
requires-python = ">=3.9"
readme = "README.md"
authors = [{ name = "Daniel Seemaier", email = "daniel.seemaier@kit.edu" }]
maintainers = [
  { name = "Daniel Salwasser", email = "daniel.salwasser@outlook.com" },
]
keywords = ["NetworKit", "KaMinPar", "Graph Partitioning"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Cython",
  "Programming Language :: C++",
  "Operating System :: POSIX :: Linux",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Repository = "https://github.com/KaHIP/KaMinPar.git"
Issues = "https://github.com/KaHIP/KaMinPar/issues"

[dependency-groups]
build = ["cibuildwheel"]
test = ["pytest"]
lint = ["ruff", "mypy"]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.cibuildwheel]
build-verbosity = 1
before-build = """
  yum install -y sparsehash-devel hwloc-devel
"""
test-groups = ["test"]
test-command = """
  mkdir misc
  cp {project}/misc/* misc/
  pytest {package}/tests
"""

[tool.cibuildwheel.linux]
archs = ["x86_64"]
environment = { "CMAKE_ARGS" = "-DKAMINPAR_PYTHON_INSTALL_TBB=On" }
environment-pass = ["CMAKE_ARGS", "SKBUILD_CMAKE_DEFINE"]
repair-wheel-command = """
  pip install networkit==11.1.post1
  NETWORKIT_DIR=$(python -c "import networkit, os; print(os.path.dirname(networkit.__file__))")
  export LD_LIBRARY_PATH="/tmp/tbb/:$NETWORKIT_DIR/..:$LD_LIBRARY_PATH"
  auditwheel repair -w {dest_dir} {wheel}
"""

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # Pyflakes
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "I",   # isort
]

[tool.mypy]
warn_return_any = true
disallow_untyped_defs = true
