[project]
name = "kaminpar"
version = "3.1.0"
description = "Python Bindings for KaMinPar"
requires-python = ">=3.9"

[dependency-groups]
test = ["pytest"]

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.cibuildwheel]
build-verbosity = 1
before-build = "yum install -y sparsehash-devel"
test-groups = ["test"]
test-command = """
  mkdir misc
  cp {project}/misc/* misc/
  pytest {package}/tests
"""

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
environment = { "CMAKE_ARGS" = "-DKAMINPAR_PYTHON_INSTALL_TBB=On" }
environment-pass = ["CMAKE_ARGS", "SKBUILD_CMAKE_DEFINE"]
repair-wheel-command = """
  export LD_LIBRARY_PATH="/tmp/tbb/:$LD_LIBRARY_PATH"
  auditwheel repair -w {dest_dir} {wheel}
"""
